--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -281,24 +281,49 @@ span:nth-of-type(27) {
     flex-direction: column;
     align-items: center;
     justify-content: center;    
-    margin: 0% 5%;
+    padding: 0% 5%;
 }
-.contAboutB_textB {
+.contAboutB_itemTop {
+    width: 100%;
+    height: 100%;
     position: relative;
     background-color: rgb(128, 115, 115);
 }
-.contAboutB_textB > p{
+.contAboutB_itemTop > p{
     padding: 2%;
+    text-align: center;
     font-family: 'PT Sans', sans-serif;
     font-size: 1em;
     color: snow;
-}
-.contAboutB_textB::after{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: rgb(199, 26, 26);
 
+}
+.contAboutB_itemTop::after{
+    bottom: 0%;
+    right: 0%;
+    width: 5%;
+    height: 25%;
+    position: absolute;
+    content: "";
+    background-color: rgb(238, 240, 218);
+    border-radius: 0% 0% 60% 0%;
+
+}
+.contAboutB_itemTop::before{
+    bottom: 0%;
+    right: 0%;
+    width: 5%;
+    height: 25%;
+    position: absolute;
+    content: "";
+    background-color: rgb(73, 72, 72);
+
+}
+.contAboutB_itemBottom {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 /*-------------오른쪽 > About the artist*/
 .contArtist {
