--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -23,6 +23,12 @@ h3 {
     padding: 1%;
     color: rgb(141, 141, 141);
 }
+a {
+    text-decoration: none;
+    font-weight: bolder;
+    color: black;
+}
+
 
 /*----------------마우스 효과-------------------------------------*/
 .cursor {
@@ -301,7 +307,7 @@ span:nth-of-type(27) {
     bottom: 0%;
     right: 0%;
     width: 5%;
-    height: 25%;
+    height: 18%;
     position: absolute;
     content: "";
     background-color: rgb(238, 240, 218);
@@ -312,7 +318,7 @@ span:nth-of-type(27) {
     bottom: 0%;
     right: 0%;
     width: 5%;
-    height: 25%;
+    height: 18%;
     position: absolute;
     content: "";
     background-color: rgb(73, 72, 72);
@@ -322,19 +328,100 @@ span:nth-of-type(27) {
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    margin:5% 0;
+}
+.contAboutB_itemBottom>div:nth-child(1){
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0% 10%;
+}
+
+.contAboutB_itemBottom>div:nth-child(2){
+    float: left;
+    padding: 0% 10%;
+}
+.mapOn {
+    width: 90%;
+    height: 80%;
+    float: left;
+    padding: 2% 0% 2% 2%;
+    background-color: rgb(73, 72, 72);
+    display: none;
+}
+.mapOn> iframe {
+    width: 80%;
+}
+.admissionFeeTab{
+    border-bottom: 1px solid grey;
+    border-top: 1px solid grey;
+    text-align: center;
+}
+.admissionFeeTab :nth-child(2n-1) {
+    background-color: rgb(202, 198, 193);
 }
 /*-------------오른쪽 > About the artist*/
 .contArtist {
     width: 100%;
     display: flex;
-    padding: 1% 1% 5%;
+    padding: 1% 1% 1%;
     flex-direction: column;
     justify-content: center;
     background-color: rgb(21, 78, 9);
 }
+.contArtistBox{
+    margin: 0 10%;
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
 
+    border: 1px black solid;
+
+}
+.contArtistBox>div{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    border: 1px black solid;
+}
+.contArtistBox_imgwarp{
+    width: 100px;
+    height: 90%;
+    border: 1px red solid;
+    overflow: hidden;
+    padding-top: 5%;
+}
+.contArtistBox_imgwarp>div>img{
+    border: 1px transparent solid;
+    border-radius: 50%;
+    max-height: 130px;
+    width: 100%;
+}
+.contArtistBox_textwarp{
+    float: left;
+    padding: 2%;
+    width: 67%;
+}
+.contArtistBox_textwarp>div>span{
+    display: block;
+}
+.artistKName{
+    font-size: larger;
+    font-weight: bolder;
+}
+.artistName{
+    font-size: smaller;
+    font-style: italic;
+    font-weight: bolder;
+    margin-bottom: 0;
+}
+.artistTime{
+    font-size: small;
+    margin-bottom: 1%;
+}
 /*-------------오른쪽 > Art gallery*/
 .contArt {
     width: 100%;
