--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -583,4 +583,7 @@ span:nth-of-type(27) {
     .contArtBox {
         flex-direction: column;
     }
+    .contArtistBox_textwarp>div>span{
+        display: none;
+    }
 }
