--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -627,7 +627,10 @@ footer>div:nth-child(1)>a>img:hover {
     }
 }
 @media all and (max-width:780px){
-
+    .youtubeIframeBox>iframe {
+        width: 90%;
+        height: 90%;
+    }
     .contArtistBox>div{
         flex-direction: column;   
         align-items: center;
