--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -589,8 +589,8 @@ footer>div:nth-child(1)>a>img:hover {
     top: 0;
     right: 0;
     z-index: 1;
-    width: 7rem;
-    height: 7rem;
+    width: 4.5em;
+    height: 4.5em;
     background-color: white;
     cursor: pointer;
 }
@@ -612,15 +612,11 @@ footer>div:nth-child(1)>a>img:hover {
     background-color: rgb(197, 194, 13);
     border-radius: 20px;
 }
-/* .menu_icon:hover{
-    background-color:black;
-} */
-.menu_icon:hover.menu_icon :nth-child(1){
-    display: none;
+.menu_icon:hover{
+    background-color:rgb(53, 51, 51);
+    border-radius: 50%;
 }
-.menu_icon:hover.menu_icon :nth-child(2){
-    display: none;
-}
+
 .menu_icon:hover.menu_icon>span{
     height: 3em;
     width: 3em;
@@ -640,8 +636,8 @@ footer>div:nth-child(1)>a>img:hover {
     background-color: black;
 }
 .menu_list_icon {
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
     background-color:transparent;
     background-color: aqua;
     padding: 5%;
@@ -665,7 +661,13 @@ footer>div:nth-child(1)>a>img:hover {
     width: 55%;
     height: 100%;
 }
-
+.menu_listCh>ul{
+    list-style: none;
+}
+.menu_listCh>ul>li>a{
+    font-size: 5em;
+    color: snow;
+}
 
 
 
