--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -478,8 +478,12 @@ span:nth-of-type(27) {
 .contArt_imgWrap>a>img:hover {
     filter: grayscale(0%) contrast(110%);
 }
+
+/*-------------오른쪽 > Event*/
+
 .contEvent {
     width: 100%;
+    height: auto;
     display: flex;
     padding: 1% 1% 10%;
     flex-direction: column;
@@ -493,6 +497,8 @@ span:nth-of-type(27) {
     text-align: center;   
 }
 .EventBox {
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: baseline;
@@ -515,7 +521,6 @@ span:nth-of-type(27) {
 
 .EventBoxChi>div>button {
 	position: relative;
-	z-index: 2;
 	background-color: #fff;
 	border: 2px solid #333;
 	color: #333;
@@ -543,6 +548,173 @@ span:nth-of-type(27) {
     font-size: 1.8em;
 
 }
+.Event_popup1{
+    display: none;
+    width: 97%;
+    height: 97%;
+    position: fixed;
+    z-index: 10;
+    top: 1%;
+    left: 1%;
+    background-color: rgba(53, 53, 53, 0.9);
+    border: 1px red solid;
+
+}
+.Event_popup1Layer{
+    width: 40%;
+    height: 40em;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    top: 20%;
+    left: 30%;
+    background-color: rgba(53, 53, 53, 1);
+}
+.Event_popup1Layer>div:nth-child(1) {
+    width: 90%;
+    height: 70%;
+    border: #333 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://i.ibb.co/5jq3rsJ/test1-3.jpg);
+}
+.Event_popup1LayerTop {
+    position: relative;
+    width: 100%;
+    height: 20%;
+    /* border: red solid 1px; */
+    text-align: center;
+    font-family: 'Kanginhan';
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;   
+    z-index: 10;
+}
+.Event_popup1LayerTop::after {
+    position: absolute;
+    top: -0.5%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-color: snow;
+    opacity: calc(50%);
+    z-index: -1;
+}
+.Event_popup1Input {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(167, 154, 137);
+}
+
+.Event_popup1Input>div {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px transparent solid;
+    border-radius: 15px;
+    background-color: transparent;
+    margin: 2% 0;
+    padding: 2%;
+    font-weight: bolder;
+    font-size: 1em;
+}
+.Event_popup1Input>div:hover {
+    background-color: snow;
+}
+.Event_popup1Input>div>input {
+    width: 60%;
+    font-size: 1em;
+    border: transparent 1px solid;
+    background-color: transparent;
+}
+.Event_popup1Input>div>input:focus {
+    background-color: rgb(240, 240, 104);
+}
+/* .Event_popup1check {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+} */
+.Event_popup1bottom {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    z-index: 10;
+}
+.Event_popup1bottom::after {
+    position: absolute;
+    top: -1%;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-color: snow;
+    opacity: calc(50%);
+    z-index: -1;
+}
+.Event_popup1Layer>div:nth-child(2) {
+    width: 50%;
+    height: 10%;
+    text-align: center;
+}
+.Event_popup1Layer>div:nth-child(2)>button {
+    width: 90%;
+    height: 90%;
+    font-weight: bold;
+    font-size: 1em;
+    background-color: rgb(167, 154, 137);
+    border-radius: 25px;
+}
+.Event_popup1Layer>div:nth-child(2)>button:active {
+    background-color: rgb(240, 240, 104);
+}
+.Event_hiden{
+    width: 5em;
+    height: 5em;
+    position: fixed;
+    top: 2%;
+    right: 2.5%;
+    background-color: rgb(53, 51, 51);
+}
+.Event_hiden>span {
+    display: block;
+    width: 3em;
+    height: 0.8em;
+    background-color: snow;
+    border-radius: 25px;
+    content: "";
+}
+
+.Event_hiden>span:nth-child(1) {
+    transform: rotate( 45deg ) translate( 76% , 89% );
+}
+.Event_hiden>span:nth-child(2) {
+    transform: rotate( -45deg ) translate( -5% , 200% );
+}
+/* .Event_popup1Layer::after{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px rgb(84, 50, 205) solid;
+
+    content: "";
+} */
 /*-------------오른쪽 > footer*/
 footer{
     height: auto;
@@ -581,7 +753,6 @@ footer>div:nth-child(1)>a>img:hover {
     right: 0%;
     top: 0%;
     text-align: end;
-    /* background-color: transparent; */
     background-color: darkslategrey;
 }
 .menu_icon {
@@ -591,7 +762,7 @@ footer>div:nth-child(1)>a>img:hover {
     z-index: 1;
     width: 4.5em;
     height: 4.5em;
-    background-color: white;
+    background-color: transparent;
     cursor: pointer;
 }
 .menu_icon>div {
@@ -617,11 +788,7 @@ footer>div:nth-child(1)>a>img:hover {
     border-radius: 50%;
 }
 
-.menu_icon:hover.menu_icon>span{
-    height: 3em;
-    width: 3em;
-    background: radial-gradient( ellipse, rgb(197, 194, 13), rgb(194, 194, 182), transparent );
-}
+
 .menu_list{
     position: fixed;
     right: 0;
@@ -639,8 +806,8 @@ footer>div:nth-child(1)>a>img:hover {
     width: 3em;
     height: 3em;
     background-color:transparent;
-    background-color: aqua;
-    padding: 5%;
+    background-color: rgb(197, 194, 13);
+    padding: 1.5%;
     text-align: center;
     position:fixed ;
     right: 0%;
@@ -660,14 +827,25 @@ footer>div:nth-child(1)>a>img:hover {
 .menu_listCh{
     width: 55%;
     height: 100%;
+    position: fixed;
+    border: #fff 1px solid;
+
 }
 .menu_listCh>ul{
+    width: 90%;
     list-style: none;
 }
 .menu_listCh>ul>li>a{
-    font-size: 5em;
+    width: 100%;
+    font-size: 3em;
     color: snow;
+    border: #fff 1px solid;
 }
+.menu_listCh>ul>li>a:hover{
+    font-size: 2em;
+    color: rgb(197, 194, 13);
+}
+
 
 
 
@@ -681,7 +859,7 @@ footer>div:nth-child(1)>a>img:hover {
     }
 }
 
-@media all and (max-width:900px){
+@media all and (max-width:980px){
     body{
         overflow: scroll;
     }
@@ -720,6 +898,11 @@ footer>div:nth-child(1)>a>img:hover {
     .contArt_imgWrap{
         padding: 0%;
     }
+    .Event_popup1Layer{
+        width: 60%;
+        top: 15%;
+        left: 20%;
+    }
 }
 @media all and (max-width:780px){
     .contHomeBox> h1 {
@@ -752,4 +935,14 @@ footer>div:nth-child(1)>a>img:hover {
         flex-direction: column;
         align-items: center;
     }
+    .Event_popup1Layer{
+        width: 80%;
+        left: 10%;
+
+    }
+    .Event_popup1Input>div {
+        width: 95%;
+        flex-direction: column;
+    }
+
 }
