--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -642,12 +642,7 @@ span:nth-of-type(27) {
 .Event_popup1Input>div>input:focus {
     background-color: rgb(240, 240, 104);
 }
-/* .Event_popup1check {
-    width: 70%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-} */
+
 .Event_popup1bottom {
     position: relative;
     display: flex;
@@ -684,7 +679,7 @@ span:nth-of-type(27) {
 .Event_popup1Layer>div:nth-child(2)>button:active {
     background-color: rgb(240, 240, 104);
 }
-.Event_hiden{
+.Event_popup1_Close{
     width: 5em;
     height: 5em;
     position: fixed;
@@ -692,7 +687,7 @@ span:nth-of-type(27) {
     right: 2.5%;
     background-color: rgb(53, 51, 51);
 }
-.Event_hiden>span {
+.Event_popup1_Close>span {
     display: block;
     width: 3em;
     height: 0.8em;
@@ -701,10 +696,10 @@ span:nth-of-type(27) {
     content: "";
 }
 
-.Event_hiden>span:nth-child(1) {
+.Event_popup1_Close>span:nth-child(1) {
     transform: rotate( 45deg ) translate( 76% , 89% );
 }
-.Event_hiden>span:nth-child(2) {
+.Event_popup1_Close>span:nth-child(2) {
     transform: rotate( -45deg ) translate( -5% , 200% );
 }
 /* .Event_popup1Layer::after{
@@ -715,6 +710,181 @@ span:nth-of-type(27) {
 
     content: "";
 } */
+.Event_popup2{
+    display: none;
+    width: 97%;
+    height: 97%;
+    position: fixed;
+    z-index: 10;
+    top: 1%;
+    left: 1%;
+    background-color: rgba(53, 53, 53, 0.9);
+    border: 1px red solid;
+}
+.Event_popup2Layer{
+    width: 40%;
+    height: 40em;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    top: 20%;
+    left: 30%;
+    background-color: rgba(53, 53, 53, 1);
+}
+.Event_popup2Layer>div:nth-child(1) {
+    width: 90%;
+    height: 70%;
+    border: #333 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://i.ibb.co/5jq3rsJ/test1-3.jpg);
+}
+.Event_popup2LayerTop {
+    position: relative;
+    width: 100%;
+    height: 20%;
+    /* border: red solid 1px; */
+    text-align: center;
+    font-family: 'Kanginhan';
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;   
+    z-index: 10;
+}
+.Event_popup2LayerTop::after {
+    position: absolute;
+    top: -0.5%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-color: snow;
+    opacity: calc(50%);
+    z-index: -1;
+}
+.Event_popup2Input {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(167, 154, 137);
+}
+
+.Event_popup2Input>div {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px transparent solid;
+    border-radius: 15px;
+    background-color: transparent;
+    margin: 2% 0;
+    padding: 2%;
+    font-weight: bolder;
+    font-size: 1em;
+}
+.Event_popup2Select {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(167, 154, 137);
+}
+.Event_popup2Select>div {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px transparent solid;
+    border-radius: 15px;
+    background-color: transparent;
+
+    font-weight: bolder;
+    font-size: 1em;
+}
+.Event_popup2Input>div:hover {
+    background-color: snow;
+}
+.Event_popup2Input>div>input {
+    width: 60%;
+    font-size: 1em;
+    border: transparent 1px solid;
+    background-color: transparent;
+}
+.Event_popup2Input>div>input:focus {
+    background-color: rgb(240, 240, 104);
+}
+
+.Event_popup2bottom {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    z-index: 10;
+}
+.Event_popup2bottom::after {
+    position: absolute;
+    top: -1%;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-color: snow;
+    opacity: calc(50%);
+    z-index: -1;
+}
+.Event_popup2Layer>div:nth-child(2) {
+    width: 50%;
+    height: 10%;
+    text-align: center;
+}
+.Event_popup2Layer>div:nth-child(2)>button {
+    width: 90%;
+    height: 90%;
+    font-weight: bold;
+    font-size: 1em;
+    background-color: rgb(167, 154, 137);
+    border-radius: 25px;
+}
+.Event_popup2Layer>div:nth-child(2)>button:active {
+    background-color: rgb(240, 240, 104);
+}
+.Event_popup2_Close{
+    width: 5em;
+    height: 5em;
+    position: fixed;
+    top: 2%;
+    right: 2.5%;
+    background-color: rgb(53, 51, 51);
+}
+.Event_popup2_Close>span {
+    display: block;
+    width: 3em;
+    height: 0.8em;
+    background-color: snow;
+    border-radius: 25px;
+    content: "";
+}
+
+.Event_popup2_Close>span:nth-child(1) {
+    transform: rotate( 45deg ) translate( 76% , 89% );
+}
+.Event_popup2_Close>span:nth-child(2) {
+    transform: rotate( -45deg ) translate( -5% , 200% );
+}
 /*-------------오른쪽 > footer*/
 footer{
     height: auto;
@@ -902,6 +1072,12 @@ footer>div:nth-child(1)>a>img:hover {
         width: 60%;
         top: 15%;
         left: 20%;
+        overflow: scroll;
+    }
+    .Event_popup2Layer{
+        width: 60%;
+        top: 15%;
+        left: 20%;
     }
 }
 @media all and (max-width:780px){
@@ -935,14 +1111,36 @@ footer>div:nth-child(1)>a>img:hover {
         flex-direction: column;
         align-items: center;
     }
+    .EventBoxChi {
+        width: 90%;
+    }
     .Event_popup1Layer{
         width: 80%;
         left: 10%;
-
+        top: 10%;
+        left: 5%;
     }
-    .Event_popup1Input>div {
+    .Event_popup2Input>div {
         width: 95%;
         flex-direction: column;
     }
+    .Event_popup2Input>div {
+        width: 95%;
+        flex-direction: column;
+    }
+    .Event_popup1LayerTop {
+        font-size: 1.2em;
+    }
+    .Event_popup2LayerTop {
+        font-size: 1.2em;
+    }
+    .Event_popup1Layer{
 
+        background-color: rgba(53, 53, 53, 1);
+    }
+    .Event_popup2Layer{
+        top: 10%;
+        left: 30%;
+        background-color: rgba(53, 53, 53, 1);
+    }
 }
