--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -587,7 +587,6 @@ span:nth-of-type(27) {
     width: 100%;
     height: 20%;
     /* border: red solid 1px; */
-    text-align: center;
     font-family: 'Kanginhan';
     font-size: 2em;
     font-weight: bold;
@@ -736,36 +735,57 @@ span:nth-of-type(27) {
 .Event_popup2Layer>div:nth-child(1) {
     width: 90%;
     height: 70%;
+    overflow-y: scroll;
     border: #333 1px solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(https://i.ibb.co/5jq3rsJ/test1-3.jpg);
+    border:  20px solid;
+    border-image: url("https://i.ibb.co/VB7vzKV/frame3.png") 93 92 87 92 stretch stretch;
+    background-color: snow;
 }
 .Event_popup2LayerTop {
-    position: relative;
     width: 100%;
     height: 20%;
     /* border: red solid 1px; */
-    text-align: center;
     font-family: 'Kanginhan';
     font-size: 2em;
     font-weight: bold;
     text-align: center;   
     z-index: 10;
 }
-.Event_popup2LayerTop::after {
-    position: absolute;
-    top: -0.5%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    content: "";
-    background-color: snow;
-    opacity: calc(50%);
-    z-index: -1;
+.Event_popup2Select {
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(128, 115, 115);
+    padding: 2% 0;
 }
+.Event_popup2Select>div {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    border: 1px red solid;
+    border-radius: 15px;
+    background-color: snow;
+    padding: 1%;
+    font-weight: bolder;
+    font-size: 1em;
+    margin-bottom: 1%;
+}
+.Event_popup2Select>div>select {
+    width: 50%;
+    font-size: 1em;
+    border: transparent 1px solid;
+    background-color: transparent;
+}
+
 .Event_popup2Input {
     width: 100%;
     height: auto;
@@ -773,7 +793,8 @@ span:nth-of-type(27) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(167, 154, 137);
+    /* background-image: url(https://i.ibb.co/5jq3rsJ/test1-3.jpg); */
+    /* background-color: rgb(167, 154, 137); */
 }
 
 .Event_popup2Input>div {
@@ -791,28 +812,8 @@ span:nth-of-type(27) {
     font-weight: bolder;
     font-size: 1em;
 }
-.Event_popup2Select {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(167, 154, 137);
-}
-.Event_popup2Select>div {
-    width: 70%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px transparent solid;
-    border-radius: 15px;
-    background-color: transparent;
 
-    font-weight: bolder;
-    font-size: 1em;
-}
+
 .Event_popup2Input>div:hover {
     background-color: snow;
 }
@@ -1079,6 +1080,9 @@ footer>div:nth-child(1)>a>img:hover {
         top: 15%;
         left: 20%;
     }
+    .Event_popup2Select>div {
+        width: 80%;
+    }
 }
 @media all and (max-width:780px){
     .contHomeBox> h1 {
@@ -1114,33 +1118,33 @@ footer>div:nth-child(1)>a>img:hover {
     .EventBoxChi {
         width: 90%;
     }
+    .Event_popup1{
+        height: auto;
+    }
     .Event_popup1Layer{
         width: 80%;
         left: 10%;
         top: 10%;
         left: 5%;
     }
-    .Event_popup2Input>div {
-        width: 95%;
-        flex-direction: column;
-    }
-    .Event_popup2Input>div {
-        width: 95%;
-        flex-direction: column;
-    }
+    
     .Event_popup1LayerTop {
         font-size: 1.2em;
+    }
+    .Event_popup2{
+        height: auto;
+    }
+    .Event_popup2Layer{
+        width: 80%;
+        left: 10%;
+        top: 10%;
+        left: 5%;
+        /* justify-content: center; */
     }
     .Event_popup2LayerTop {
         font-size: 1.2em;
     }
-    .Event_popup1Layer{
-
-        background-color: rgba(53, 53, 53, 1);
-    }
-    .Event_popup2Layer{
-        top: 10%;
-        left: 30%;
-        background-color: rgba(53, 53, 53, 1);
+    .Event_popup2Select>div {
+        width: 90%;
     }
 }
