--- a/rwb/classHyo/test1/css/style.css
+++ b/rwb/classHyo/test1/css/style.css
@@ -748,7 +748,6 @@ span:nth-of-type(27) {
 .Event_popup2LayerTop {
     width: 100%;
     height: 20%;
-    /* border: red solid 1px; */
     font-family: 'Kanginhan';
     font-size: 2em;
     font-weight: bold;
@@ -757,33 +756,37 @@ span:nth-of-type(27) {
 }
 .Event_popup2Select {
     width: 90%;
-    height: auto;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(128, 115, 115);
+    border: 4px double rgb(128, 115, 115);
+    /* background-color: rgb(128, 115, 115); */
     padding: 2% 0;
 }
 .Event_popup2Select>div {
-    width: 70%;
+    width: 80%;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content:space-between;
-    border: 1px red solid;
     border-radius: 15px;
     background-color: snow;
-    padding: 1%;
+    padding: 1% 3%;
     font-weight: bolder;
     font-size: 1em;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
-.Event_popup2Select>div>select {
+.codeImgSelect {
     width: 50%;
     font-size: 1em;
     border: transparent 1px solid;
     background-color: transparent;
+}
+
+.codeImgSelect:hover {
+
 }
 
 .Event_popup2Input {
@@ -815,7 +818,7 @@ span:nth-of-type(27) {
 
 
 .Event_popup2Input>div:hover {
-    background-color: snow;
+    border: rgb(141, 141, 141) 1px solid;
 }
 .Event_popup2Input>div>input {
     width: 60%;
